# folgerhs

./: Characters.hs  README.md  folgerhs.cabal  stack.yaml
app/Folgerhs/: Animate.hs  Conversations.hs  Display.hs  Groups.hs  Main.hs  Presence.hs  Protagonism.hs  Speakers.hs
folgerhs/: README.md  folgerhs.cabal
folgerhs/app/: Main.hs
folgerhs/app/Protagonism/: Main.hs
folgerhs/app/Stage/: Main.hs
folgerhs/src/Folger/: Stage.hs  Utils.hs
folgerhs/src/Folgerhs/: Stage.hs  Utils.hs
src/Folgerhs/: Parse.hs  Stage.hs
