name:                folgerhs
version:             0.2.1.0
synopsis:            Toolset for Folger Shakespeare Library's XML annotated plays
description:         Toolset for Folger Shakespeare Library's XML annotated plays
homepage:            https://github.com/SU-LOSP/tools#readme
license:             GPL-3
license-file:        LICENSE
author:              Unai Zalakain
maintainer:          unai@gisa-elkartea.org
copyright:           2017 Unai Zalakain
category:            Text
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Folgerhs.Parse, Folgerhs.Stage
  build-depends:       base >= 4.7 && < 5
                     , xml
                     , containers
                     , gloss
  default-language:    Haskell2010

executable folgerhs
  hs-source-dirs:      app
  main-is:             Folgerhs/Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base >= 4.7 && < 5
                     , folgerhs
                     , xml
                     , containers
                     , gloss
                     , optparse-applicative
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/SU-LOSP/tools
