name:                folgerhs
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/SU-LOSP/tools#readme
license:             GPLv3
license-file:        LICENSE
author:              Unai Zalakain
maintainer:          unai@gisa-elkartea.org
copyright:           2017 Unai Zalakain
-- category:
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Folger.Utils, Folger.Stage
  build-depends:       base >= 4.7 && < 5
                     , xml >= 1.3.14 && < 1.3.15
  default-language:    Haskell2010

executable folger-stage
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , folgerhs
                     , xml >= 1.3.14 && < 1.3.15
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/SU-LOSP/tools
